# Rigel

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  Makefile  README  README.md  c_help.txt  clang_helper.c  clang_helper.h  common.h  emi.c  emi.h  gen_cmm.c  gen_cmm.h  irsim-cli.py  main.c  outline.md
test_case/: if-else.c  select-sort.c  test_input.c  test_input.c.input  ttttt.c
thesis/: thesis.yaml
thesis/frontmatter/: abstract.lyx  frontmatter.lyx  titlepage.lyx
thesis/paper-main/: backmatter.lyx  chap1.lyx  chap2.lyx  chap3.lyx  chap4.lyx  chap5.lyx  chap6.lyx  emi_main.lyx  thesis.bib
thesis/res/: docker_auto_run.sh  docker_build.sh  docker_run.sh  gcc_bug.c  llvm_bug.c  outline.txt  rigel_tree.txt  test_asm.c  vs_error.txt
